--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="/src/assets/style/output.css" rel="stylesheet" />
+    <link href="./style/output.css" rel="stylesheet" />
   </head>
   <body>
     <!-- ==================== Navigation bar ===================== -->
@@ -13,7 +13,7 @@
         <div class="w-32 h-auto">
           <img
             class="object-fits w-full h-full"
-            src="./assets/images/logo1.png"
+            src="./images/logo1.png"
             alt="logo"
           />
         </div>
@@ -131,7 +131,7 @@
         </div>
 
         <div class="w-4/5 h-auto mx-auto md:w-1/2">
-          <img class="w-full h-full" src="./assets/images/01.png" alt="" />
+          <img class="w-full h-full" src="/images/01.png" alt="" />
         </div>
       </div>
     </section>
@@ -153,7 +153,7 @@
               <div class="bg-gray-200 rounded h-1/2">
                 <img
                   class="w-full h-full object-cover"
-                  src="./assets/images/blog_01.png"
+                  src="/images/blog_01.png"
                   alt=""
                 />
               </div>
@@ -179,7 +179,7 @@
               <div class="bg-gray-200 rounded h-1/2">
                 <img
                   class="w-full h-full object-cover"
-                  src="./assets/images/blog_02.png"
+                  src="/images/blog_02.png"
                   alt=""
                 />
               </div>
@@ -204,7 +204,7 @@
               <div class="bg-gray-200 rounded h-1/2">
                 <img
                   class="w-full h-full object-cover"
-                  src="./assets/images/blog_03.png"
+                  src="/images/blog_03.png"
                   alt=""
                 />
               </div>
@@ -229,7 +229,7 @@
               <div class="bg-gray-200 rounded h-1/2">
                 <img
                   class="w-full h-full object-cover"
-                  src="./assets/images/blog_04.png"
+                  src="/images/blog_04.png"
                   alt=""
                 />
               </div>
@@ -263,7 +263,7 @@
               <div class="bg-gray-200 rounded h-1/2">
                 <img
                   class="w-full h-full object-cover"
-                  src="./assets/images/blog_01.png"
+                  src="/images/blog_01.png"
                   alt=""
                 />
               </div>
@@ -289,7 +289,7 @@
               <div class="bg-gray-200 rounded h-1/2">
                 <img
                   class="w-full h-full object-cover"
-                  src="./assets/images/blog_02.png"
+                  src="/images/blog_02.png"
                   alt=""
                 />
               </div>
@@ -314,7 +314,7 @@
               <div class="bg-gray-200 rounded h-1/2">
                 <img
                   class="w-full h-full object-cover"
-                  src="./assets/images/blog_03.png"
+                  src="/images/blog_03.png"
                   alt=""
                 />
               </div>
@@ -339,7 +339,7 @@
               <div class="bg-gray-200 rounded h-1/2">
                 <img
                   class="w-full h-full object-cover"
-                  src="./assets/images/blog_04.png"
+                  src="/images/blog_04.png"
                   alt=""
                 />
               </div>
