--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
               <div class="bg-gray-200 rounded h-1/2">
                 <img
                   class="w-full h-full object-cover"
-                  src="/images/blog_02.png"
+                  src="./images/blog_02.png"
                   alt=""
                 />
               </div>
@@ -204,7 +204,7 @@
               <div class="bg-gray-200 rounded h-1/2">
                 <img
                   class="w-full h-full object-cover"
-                  src="/images/blog_03.png"
+                  src="./images/blog_03.png"
                   alt=""
                 />
               </div>
@@ -229,7 +229,7 @@
               <div class="bg-gray-200 rounded h-1/2">
                 <img
                   class="w-full h-full object-cover"
-                  src="/images/blog_04.png"
+                  src="./images/blog_04.png"
                   alt=""
                 />
               </div>
@@ -263,7 +263,7 @@
               <div class="bg-gray-200 rounded h-1/2">
                 <img
                   class="w-full h-full object-cover"
-                  src="/images/blog_01.png"
+                  src="./images/blog_01.png"
                   alt=""
                 />
               </div>
@@ -289,7 +289,7 @@
               <div class="bg-gray-200 rounded h-1/2">
                 <img
                   class="w-full h-full object-cover"
-                  src="/images/blog_02.png"
+                  src="./images/blog_02.png"
                   alt=""
                 />
               </div>
@@ -314,7 +314,7 @@
               <div class="bg-gray-200 rounded h-1/2">
                 <img
                   class="w-full h-full object-cover"
-                  src="/images/blog_03.png"
+                  src="./images/blog_03.png"
                   alt=""
                 />
               </div>
@@ -339,7 +339,7 @@
               <div class="bg-gray-200 rounded h-1/2">
                 <img
                   class="w-full h-full object-cover"
-                  src="/images/blog_04.png"
+                  src="./images/blog_04.png"
                   alt=""
                 />
               </div>
