--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         </div>
 
         <div class="w-4/5 h-auto mx-auto md:w-1/2">
-          <img class="w-full h-full" src="/images/01.png" alt="" />
+          <img class="w-full h-full" src="./images/01.png" alt="" />
         </div>
       </div>
     </section>
@@ -153,7 +153,7 @@
               <div class="bg-gray-200 rounded h-1/2">
                 <img
                   class="w-full h-full object-cover"
-                  src="/images/blog_01.png"
+                  src="./images/blog_01.png"
                   alt=""
                 />
               </div>
